--- a/config/crescenttool_au/default/field.field.paragraph.section.field_components.yml
+++ b/config/crescenttool_au/default/field.field.paragraph.section.field_components.yml
@@ -14,6 +14,7 @@ dependencies:
     - paragraphs.paragraphs_type.featured_content
     - paragraphs.paragraphs_type.featured_links
     - paragraphs.paragraphs_type.featured_media
+    - paragraphs.paragraphs_type.product_slider
     - paragraphs.paragraphs_type.pullquote
     - paragraphs.paragraphs_type.section
     - paragraphs.paragraphs_type.tabs
@@ -45,6 +46,7 @@ settings:
       featured_content: featured_content
       featured_links: featured_links
       featured_media: featured_media
+      product_slider: product_slider
       pullquote: pullquote
       section: section
       tabs: tabs
@@ -99,13 +101,13 @@ settings:
         weight: -34
         enabled: false
       product_slider:
-        weight: -29
-        enabled: false
-      pullquote:
         weight: -33
         enabled: true
-      section:
+      pullquote:
         weight: -32
+        enabled: true
+      section:
+        weight: -31
         enabled: true
       step:
         weight: -26
@@ -114,9 +116,9 @@ settings:
         weight: -25
         enabled: false
       tabs:
-        weight: -31
+        weight: -30
         enabled: true
       tabs_tab:
-        weight: -30
+        weight: -29
         enabled: false
 field_type: entity_reference_revisions
