--- a/config/gearwrench/default/field.field.paragraph.section.field_components.yml
+++ b/config/gearwrench/default/field.field.paragraph.section.field_components.yml
@@ -12,6 +12,7 @@ dependencies:
     - paragraphs.paragraphs_type.featured_content
     - paragraphs.paragraphs_type.featured_links
     - paragraphs.paragraphs_type.featured_media
+    - paragraphs.paragraphs_type.product_slider
     - paragraphs.paragraphs_type.pullquote
     - paragraphs.paragraphs_type.section
     - paragraphs.paragraphs_type.tabs
@@ -41,63 +42,73 @@ settings:
       featured_content: featured_content
       featured_links: featured_links
       featured_media: featured_media
+      product_slider: product_slider
       pullquote: pullquote
       section: section
       tabs: tabs
     negate: 0
     target_bundles_drag_drop:
       accordion:
-        weight: -37
+        weight: -43
         enabled: false
       accordion_item:
-        weight: -36
+        weight: -42
         enabled: false
       content:
-        weight: -35
+        weight: -41
         enabled: true
+      content_2_column:
+        weight: -25
+        enabled: false
       content_callout:
-        weight: -20
-        enabled: false
-      content_callout_container:
-        weight: -34
-        enabled: true
-      embed_block:
-        weight: -33
-        enabled: true
-      embed_iframe:
-        weight: -32
-        enabled: true
-      embed_view:
-        weight: -31
-        enabled: true
-      featured_content:
-        weight: -30
-        enabled: true
-      featured_links:
-        weight: -29
-        enabled: true
-      featured_media:
-        weight: -28
-        enabled: true
-      hero:
-        weight: -27
-        enabled: false
-      hero_slide:
         weight: -26
         enabled: false
-      product_slider:
-        weight: -21
+      content_callout_container:
+        weight: -40
+        enabled: true
+      embed_block:
+        weight: -39
+        enabled: true
+      embed_iframe:
+        weight: -38
+        enabled: true
+      embed_view:
+        weight: -37
+        enabled: true
+      featured_content:
+        weight: -36
+        enabled: true
+      featured_links:
+        weight: -35
+        enabled: true
+      featured_media:
+        weight: -34
+        enabled: true
+      hero:
+        weight: -33
         enabled: false
+      hero_slide:
+        weight: -32
+        enabled: false
+      product_slider:
+        weight: -31
+        enabled: true
       pullquote:
-        weight: -25
+        weight: -30
         enabled: true
       section:
-        weight: -24
+        weight: -29
         enabled: true
-      tabs:
+      step:
+        weight: -24
+        enabled: false
+      steps:
         weight: -23
+        enabled: false
+      tabs:
+        weight: -28
         enabled: true
       tabs_tab:
-        weight: -22
+        weight: -27
         enabled: false
 field_type: entity_reference_revisions
