--- a/config/gearwrench_au/default/field.field.paragraph.section.field_components.yml
+++ b/config/gearwrench_au/default/field.field.paragraph.section.field_components.yml
@@ -11,6 +11,7 @@ dependencies:
     - paragraphs.paragraphs_type.featured_content
     - paragraphs.paragraphs_type.featured_links
     - paragraphs.paragraphs_type.featured_media
+    - paragraphs.paragraphs_type.product_slider
     - paragraphs.paragraphs_type.pullquote
     - paragraphs.paragraphs_type.section
     - paragraphs.paragraphs_type.tabs
@@ -31,62 +32,82 @@ default_value_callback: ''
 settings:
   handler: 'default:paragraph'
   handler_settings:
-    negate: 0
     target_bundles:
       content: content
+      content_callout_container: content_callout_container
       embed_block: embed_block
       embed_iframe: embed_iframe
       embed_view: embed_view
       featured_content: featured_content
       featured_links: featured_links
       featured_media: featured_media
+      product_slider: product_slider
       pullquote: pullquote
       section: section
       tabs: tabs
+    negate: 0
     target_bundles_drag_drop:
       accordion:
-        weight: -31
+        weight: -43
         enabled: false
       accordion_item:
-        weight: -30
+        weight: -42
         enabled: false
       content:
+        weight: -41
         enabled: true
-        weight: -29
-      embed_block:
-        enabled: true
-        weight: -28
-      embed_iframe:
-        enabled: true
-        weight: -27
-      embed_view:
-        enabled: true
-        weight: -26
-      featured_content:
-        enabled: true
+      content_2_column:
         weight: -25
+        enabled: false
+      content_callout:
+        weight: -26
+        enabled: false
+      content_callout_container:
+        weight: -40
+        enabled: true
+      embed_block:
+        weight: -39
+        enabled: true
+      embed_iframe:
+        weight: -38
+        enabled: true
+      embed_view:
+        weight: -37
+        enabled: true
+      featured_content:
+        weight: -36
+        enabled: true
       featured_links:
+        weight: -35
         enabled: true
-        weight: -24
       featured_media:
+        weight: -34
         enabled: true
-        weight: -23
       hero:
-        weight: -22
+        weight: -33
         enabled: false
       hero_slide:
-        weight: -21
+        weight: -32
         enabled: false
+      product_slider:
+        weight: -31
+        enabled: true
       pullquote:
+        weight: -30
         enabled: true
-        weight: -20
       section:
+        weight: -29
         enabled: true
-        weight: -19
+      step:
+        weight: -24
+        enabled: false
+      steps:
+        weight: -23
+        enabled: false
       tabs:
+        weight: -28
         enabled: true
-        weight: -18
       tabs_tab:
-        weight: -17
+        weight: -27
         enabled: false
 field_type: entity_reference_revisions
