--- a/config/sata_emea/default/field.field.paragraph.section.field_components.yml
+++ b/config/sata_emea/default/field.field.paragraph.section.field_components.yml
@@ -11,6 +11,7 @@ dependencies:
     - paragraphs.paragraphs_type.featured_content
     - paragraphs.paragraphs_type.featured_links
     - paragraphs.paragraphs_type.featured_media
+    - paragraphs.paragraphs_type.product_slider
     - paragraphs.paragraphs_type.pullquote
     - paragraphs.paragraphs_type.section
     - paragraphs.paragraphs_type.tabs
@@ -37,54 +38,88 @@ settings:
       featured_content: featured_content
       featured_links: featured_links
       featured_media: featured_media
+      product_slider: product_slider
       pullquote: pullquote
       section: section
       tabs: tabs
     negate: 0
     target_bundles_drag_drop:
       accordion:
-        weight: -31
+        weight: -53
         enabled: false
       accordion_item:
-        weight: -30
+        weight: -52
         enabled: false
       content:
-        weight: -29
+        weight: -51
         enabled: true
+      content_2_column:
+        weight: -37
+        enabled: false
+      content_callout:
+        weight: -36
+        enabled: false
+      content_callout_container:
+        weight: -35
+        enabled: false
+      content_driver:
+        weight: -34
+        enabled: false
+      content_driver_item:
+        weight: -33
+        enabled: false
+      digital_resources:
+        weight: -32
+        enabled: false
       embed_block:
-        weight: -28
+        weight: -50
         enabled: true
       embed_iframe:
-        weight: -27
+        weight: -49
         enabled: true
       embed_view:
-        weight: -26
+        weight: -48
         enabled: true
       featured_content:
-        weight: -25
+        weight: -47
         enabled: true
       featured_links:
-        weight: -24
+        weight: -46
         enabled: true
       featured_media:
-        weight: -23
+        weight: -45
         enabled: true
       hero:
-        weight: -22
+        weight: -44
         enabled: false
       hero_slide:
-        weight: -21
+        weight: -43
         enabled: false
+      product_slider:
+        weight: -42
+        enabled: true
       pullquote:
-        weight: -20
+        weight: -41
         enabled: true
+      sata_promise:
+        weight: -31
+        enabled: false
+      sata_promise_line:
+        weight: -30
+        enabled: false
       section:
-        weight: -19
+        weight: -40
         enabled: true
+      step:
+        weight: -29
+        enabled: false
+      steps:
+        weight: -28
+        enabled: false
       tabs:
-        weight: -18
+        weight: -39
         enabled: true
       tabs_tab:
-        weight: -17
+        weight: -38
         enabled: false
 field_type: entity_reference_revisions
