--- a/config/sata_emea/default/core.extension.yml
+++ b/config/sata_emea/default/core.extension.yml
@@ -1,4 +1,5 @@
 module:
+  acquia_connector: 0
   acquia_purge: 0
   acquia_search: 0
   address: 0
@@ -41,8 +42,6 @@ module:
   current_page_crumb: 0
   datetime: 0
   datetime_range: 0
-  devel: 0
-  devel_generate: 0
   dynamic_page_cache: 0
   editor: 0
   editor_file: 0
@@ -59,6 +58,7 @@ module:
   file_mdm_font: 0
   filter: 0
   focal_point: 0
+  gearwrench_product_category_filtering: 0
   google_tag: 0
   help: 0
   history: 0
@@ -125,8 +125,8 @@ module:
   rest: 0
   robotstxt: 0
   sata_core: 0
-  sata_product_category_filtering: 0
   sata_emea_migrations: 0
+  sata_product_category_filtering: 0
   schema_metatag: 0
   schema_product: 0
   search: 0
@@ -154,7 +154,6 @@ module:
   video_embed_field: 0
   video_embed_media: 0
   views_data_export: 0
-  views_ui: 0
   viewsreference: 0
   webform: 0
   webform_attachment: 0
