--- a/config/sata_colombia/default/config_split.config_split.remote_dev.yml
+++ b/config/sata_colombia/default/config_split.config_split.remote_dev.yml
@@ -8,13 +8,11 @@ description: ''
 weight: 0
 folder: ../config/sata_colombia/remote_dev
 module:
-  acquia_connector: 0
   dblog: 0
   stage_file_proxy: 0
   shield: 0
 theme: {  }
-blacklist:
-  - purge.logger_channels
+blacklist: {  }
 graylist: {  }
 graylist_dependents: true
 graylist_skip_equal: true
