--- a/config/sata_colombia/default/core.extension.yml
+++ b/config/sata_colombia/default/core.extension.yml
@@ -1,4 +1,6 @@
 module:
+  acquia_connector: 0
+  acquia_purge: 0
   acquia_search: 0
   address: 0
   admin_toolbar: 0
@@ -56,6 +58,7 @@ module:
   file_mdm_font: 0
   filter: 0
   focal_point: 0
+  gearwrench_product_category_filtering: 0
   google_tag: 0
   help: 0
   history: 0
