--- a/config/sata_us/default/sata.settings.yml
+++ b/config/sata_us/default/sata.settings.yml
@@ -5,7 +5,13 @@ features:
   favicon: 1
 logo:
   use_default: 1
+  path: ''
 favicon:
   use_default: 0
   path: themes/custom/sata/favicons/favicon.ico
   mimetype: image/vnd.microsoft.icon
+price_spider_generic_key: ''
+price_spider_hide: 1
+price_spider_country: ''
+price_spider_language: ''
+price_spider_product_key: ''
