--- a/config/sata_emea/default/views.settings.yml
+++ b/config/sata_emea/default/views.settings.yml
@@ -5,10 +5,11 @@ ui:
   show:
     additional_queries: false
     advanced_column: true
+    default_display: false
     performance_statistics: true
     preview_information: true
     sql_query:
-      enabled: false
+      enabled: true
       where: above
     display_embed: true
     master_display: true
