--- a/config/sata_emea/default/views.view.product_category_grid.yml
+++ b/config/sata_emea/default/views.view.product_category_grid.yml
@@ -91,7 +91,20 @@ display:
       cache:
         type: tag
         options: {  }
-      empty: {  }
+      empty:
+        area:
+          id: area
+          table: views
+          field: area
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: text
+          empty: true
+          content:
+            value: '<div class="text-center">No results have been found within your selection.</div>'
+            format: full_html
+          tokenize: false
       sorts:
         title:
           id: title
