--- a/composer.json
+++ b/composer.json
@@ -85,6 +85,7 @@
         "drupal/file_mdm": "^2.4",
         "drupal/focal_point": "^1.5",
         "drupal/google_tag": "^1.3",
+        "drupal/hubspot": "^3.0@alpha",
         "drupal/image_effects": "^3.1",
         "drupal/imageapi_optimize": "^4.0@beta",
         "drupal/imageapi_optimize_resmushit": "^2.0@beta",
