--- a/config/sata_brazil/default/apex_common.settings.yml
+++ b/config/sata_brazil/default/apex_common.settings.yml
@@ -1,6 +1,7 @@
-warranty_sftp_host: '199.115.148.37'
-warranty_sftp_username: 'ftpmagento'
-warranty_sftp_password: 'UbgrBlA3'
-warranty_sftp_root: '/Magento/WarrantyExport/Queue'
-warranty_vendor_code: 'APEX-SAT-BR-POR'
-warranty_sid_prepend: 'SAT-BR'
+warranty_sftp_host: ftpsapprod.apextoolgroup.com
+warranty_sftp_username: ftpmagento
+warranty_sftp_password: UbgrBlA3
+warranty_sftp_root: /Magento/WarrantyExport/Queue
+warranty_highest_exported_sid: 0
+warranty_vendor_code: APEX-SAT-BR-POR
+warranty_sid_prepend: SAT-BR
