--- a/docroot/themes/custom/sata/sata.libraries.yml
+++ b/docroot/themes/custom/sata/sata.libraries.yml
@@ -118,6 +118,9 @@ library--add-to-any:
 
 library--hubspot:
   version: 1.x
+  css:
+    component:
+      css/contrib-overrides/hubspot/hubspot.css: {}
   js:
     //js.hs-scripts.com/20087540.js: { type: external, attributes: { async: true, defer: true, id: 'hs-script-loader' } }
 
