--- a/config/sata_emea/default/field.field.node.page.field_components.yml
+++ b/config/sata_emea/default/field.field.node.page.field_components.yml
@@ -10,6 +10,7 @@ dependencies:
     - paragraphs.paragraphs_type.content
     - paragraphs.paragraphs_type.content_2_column
     - paragraphs.paragraphs_type.content_callout
+    - paragraphs.paragraphs_type.content_driver
     - paragraphs.paragraphs_type.digital_resources
     - paragraphs.paragraphs_type.embed_block
     - paragraphs.paragraphs_type.embed_iframe
@@ -43,6 +44,7 @@ settings:
       content: content
       content_2_column: content_2_column
       content_callout: content_callout
+      content_driver: content_driver
       digital_resources: digital_resources
       embed_block: embed_block
       embed_iframe: embed_iframe
@@ -61,7 +63,7 @@ settings:
         weight: -57
         enabled: true
       accordion_item:
-        weight: -50
+        weight: -49
         enabled: false
       callout_diagram:
         weight: -56
@@ -82,63 +84,63 @@ settings:
         weight: -52
         enabled: false
       content_driver:
-        weight: -33
-        enabled: false
+        weight: -51
+        enabled: true
       content_driver_item:
         weight: -32
         enabled: false
       digital_resources:
-        weight: -51
+        weight: -50
         enabled: true
       embed_block:
-        weight: -49
-        enabled: true
-      embed_iframe:
         weight: -48
         enabled: true
-      embed_view:
+      embed_iframe:
         weight: -47
         enabled: true
-      featured_content:
+      embed_view:
         weight: -46
         enabled: true
-      featured_links:
+      featured_content:
         weight: -45
         enabled: true
-      featured_media:
+      featured_links:
         weight: -44
         enabled: true
-      hero:
+      featured_media:
         weight: -43
-        enabled: false
-      hero_slide:
+        enabled: true
+      hero:
         weight: -42
         enabled: false
-      product_slider:
+      hero_slide:
         weight: -41
+        enabled: false
+      product_slider:
+        weight: -40
         enabled: true
       pullquote:
-        weight: -40
+        weight: -39
         enabled: false
       sata_promise:
-        weight: -39
+        weight: -38
         enabled: true
       sata_promise_line:
         weight: -31
         enabled: false
       section:
-        weight: -38
-        enabled: true
-      step:
-        weight: -34
-        enabled: false
-      steps:
         weight: -37
         enabled: true
-      tabs:
+      step:
+        weight: -33
+        enabled: false
+      steps:
         weight: -36
         enabled: true
-      tabs_tab:
+      tabs:
         weight: -35
+        enabled: true
+      tabs_tab:
+        weight: -34
         enabled: false
 field_type: entity_reference_revisions
