--- a/docroot/themes/custom/sata/sata.libraries.yml
+++ b/docroot/themes/custom/sata/sata.libraries.yml
@@ -483,6 +483,7 @@ paragraph--full--featured-media--layout-grid:
       css/libraries/paragraph/full--featured-media--layout-grid.css: {}
   dependencies:
     - sata/paragraph--full--featured-media
+    - sata/library--jquery-modal
 
 paragraph--full--featured-media--layout-live-area:
   version: 1.x
