--- a/config/sata_emea/default/core.entity_view_display.node.product.full.yml
+++ b/config/sata_emea/default/core.entity_view_display.node.product.full.yml
@@ -26,12 +26,20 @@ dependencies:
     - node.type.product
   module:
     - entity_reference_revisions
+    - text
     - user
 id: node.product.full
 targetEntityType: node
 bundle: product
 mode: full
 content:
+  body:
+    type: text_default
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    weight: 2
+    region: content
   field_components:
     type: entity_reference_revisions_entity_view
     label: hidden
@@ -39,7 +47,7 @@ content:
       view_mode: full
       link: ''
     third_party_settings: {  }
-    weight: 5
+    weight: 6
     region: content
   field_long_description:
     type: string
@@ -55,7 +63,7 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 2
+    weight: 3
     region: content
   field_product_images:
     type: entity_reference_entity_view
@@ -72,7 +80,7 @@ content:
     settings:
       link: false
     third_party_settings: {  }
-    weight: 4
+    weight: 5
     region: content
   field_set_components:
     type: entity_reference_entity_view
@@ -81,10 +89,9 @@ content:
       view_mode: set_listing
       link: false
     third_party_settings: {  }
-    weight: 3
+    weight: 4
     region: content
 hidden:
-  body: true
   field_featured_product: true
   field_industry: true
   field_keywords: true
